# fcsanity

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
fcsanity/: __init__.py  batch.py  interface.py  io.py
fcsanity/connectivity/: __init__.py  atlas_based.py  seed_based.py
fcsanity/metrics/: __init__.py  motion.py  tsnr.py
tests/: __init__.py  test_example.py
