[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcsanity"
version = "0.1.0"
description = "Sanity checks for preprocessed fMRI resting state data"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "pandas>=1.1.0",
    "nibabel>=3.2.0",
    "nilearn>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]
